// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Spinner Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-eFubAy kVQCHm"
  >
    <div
      class="sc-gKsewC cgpPfo sc-iBPRYJ ewcxWD sc-hHftDr fYuNSV sc-cbDGPM jfOLHm"
    >
      <div
        class="sc-ljRboo dKVzgf"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-eFubAy kVQCHm"
  >
    <div
      class="sc-gKsewC cgpPfo sc-iBPRYJ ewcxWD sc-hHftDr cMsQud sc-cbDGPM jfOLHm"
    >
      <div
        class="sc-ljRboo FpWZZ"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Children 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-eFubAy kVQCHm"
  >
    <div
      class="sc-jmhFOf Irpdp sc-cbDGPM jfOLHm"
    >
      <div
        class="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr sc-dUrnRO kFVJVF iKHNoa"
      >
        <div
          class="sc-gKsewC cgpPfo sc-iBPRYJ ewcxWD sc-hHftDr fYuNSV"
        >
          <div
            class="sc-ljRboo dKVzgf"
          />
          <div
            class="sc-fKFyDc jHCVxA sc-bBXqnf kCTWx"
          >
            Spinning...
          </div>
        </div>
      </div>
      <div
        class="sc-httYMd fxrWNV"
      >
        <div
          class="sc-gKsewC cgpPfo sc-iBPRYJ bgxczn"
          style="background-color: rgb(248, 249, 253);"
        >
          Spinning, the wrapped children are made opaque
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Component Label 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-eFubAy kVQCHm"
  >
    <div
      class="sc-gKsewC cgpPfo sc-iBPRYJ ewcxWD sc-hHftDr fYuNSV sc-cbDGPM jfOLHm"
    >
      <div
        class="sc-ljRboo dKVzgf"
      />
      <div
        class="sc-fKFyDc jHCVxA sc-bBXqnf kCTWx"
      >
        <div
          class="sc-fKFyDc jHCVxA sc-bBXqnf gUmJJR"
        >
          Building image 
          <button
            class="StyledButton-sc-323bzc-0 jajFOe sc-bqyKva sc-bkzZxe gjQfnS hgJIgM sc-dIUggk YDvpG"
            type="button"
          >
            12345
          </button>
          ...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Label 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-eFubAy kVQCHm"
  >
    <div
      class="sc-gKsewC cgpPfo sc-iBPRYJ ewcxWD sc-hHftDr fYuNSV sc-cbDGPM jfOLHm"
    >
      <div
        class="sc-ljRboo dKVzgf"
      />
      <div
        class="sc-fKFyDc jHCVxA sc-bBXqnf kCTWx"
      >
        Spinning...
      </div>
    </div>
  </div>
</div>
`;
